--- a/process/Code review process.asciidoc
+++ b/process/Code review process.asciidoc
@@ -77,14 +77,14 @@ git push
 === Step 4 - Start a code review
 Once you think your changes are ready, you start the review process. There are two options to start a code review on Github:
 
-=== Option 1: Create a pull request using the Github web UI
+==== Option 1: Create a pull request using the Github web UI
 This process is documented by Github https://help.github.com/articles/creating-a-pull-request/[here].
 Once this is done, request a review from one of the project maintainers, as documented by
 Github https://help.github.com/articles/requesting-a-pull-request-review/[here].
 
 If you don't know who to request, use the reviewer suggested by Github.
 
-=== Option 2: Use the review.py script from l2tdevtools:
+==== Option 2: Use the review.py script from l2tdevtools:
 Check out the l2tdevtools repository
 `git clone https://github.com/log2timeline/l2tdevtools.git`
 
